--- a/app/src/main/res/drawable/profilepicture.xml
+++ b/app/src/main/res/drawable/profilepicture.xml
@@ -3,19 +3,16 @@
     android:shape="oval">
 
     <stroke
-        android:color="@color/m"
+        android:color="@color/l"
         android:width="5dp">
     </stroke>
 
     <corners
-        android:radius="90dp"
+        android:radius="50dp"
         />
     <gradient
         android:angle="45"
         android:centerX="50%"
-        android:startColor="@color/b"
-        android:centerColor="@color/c"
-        android:endColor="@color/b"
         android:type="linear"
         />
     <padding
@@ -25,7 +22,8 @@
         android:bottom="0dp"
         />
     <size
-        android:width="100dp"
+        android:width="120dp"
         android:height="100dp">
     </size>
+
 </shape>
