--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_v"
-    android:weightSum="4"
+    android:weightSum="5"
     android:padding="10dp"
     android:gravity="center"
     android:orientation="vertical"
@@ -18,6 +18,13 @@
         android:textSize="25dp"
         android:textStyle="bold"
         android:layout_gravity="center"/>
+
+    <ImageView
+        android:id="@+id/profilePic"
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        tools:srcCompat="@tools:sample/avatars"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -126,7 +133,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:weightSum="2"
-        android:padding="10dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -135,7 +141,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:weightSum="2"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -172,7 +177,7 @@
                 android:layout_gravity="center"
                 android:textStyle="bold"
                 android:textColor="@color/m"
-                android:textSize="25dp"/>
+                android:textSize="24dp"/>
 
             <Button
                 android:id="@+id/signInId"
@@ -183,7 +188,6 @@
                 android:textColor="@color/a"
                 android:textStyle="bold"
                 android:textSize="28dp"
-                android:layout_margin="20dp"
                 android:text="Sign In" />
     </LinearLayout>
 
