--- a/app/src/main/res/layout/activity_license_information.xml
+++ b/app/src/main/res/layout/activity_license_information.xml
@@ -21,112 +21,121 @@
         android:layout_marginTop="5dp"
         android:text="Your Motor Driving\nLicense" />
 
-    <TextView
-        android:id="@+id/licenseName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseDateOfBirth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseDateOfBirth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseBloodGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseBloodGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseFather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseFather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseValidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseValidity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseIssueAuthority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseIssueAuthority"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
-    <TextView
-        android:id="@+id/licenseFirstIssue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
+            <TextView
+                android:id="@+id/licenseFirstIssue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
 
 </LinearLayout>
