--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -19,150 +19,172 @@
         android:textSize="30dp"
         android:gravity="center"
         android:layout_marginTop="5dp"
-        android:text="Motor Driving\nLicense" />
+        android:text="Motor Driving License" />
 
-    <EditText
-        android:id="@+id/nameLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Name"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/dateOfBirthLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Date of Birth"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/bloodGroupLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Blood Group"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/fatherLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:hint="Father/Husband"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/validityLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Validity"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/licenseNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="License No"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/authorityLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Issuing Authority"
-        android:background="@drawable/licensebackground"
-        />
-    <EditText
-        android:id="@+id/addressLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="Address"
-        android:background="@drawable/licensebackground"
-        />
-
-    <EditText
-        android:id="@+id/issueLicense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:layout_marginTop="5dp"
-        android:hint="First Issue"
-        android:background="@drawable/licensebackground"
-        />
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="10dp">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/clearLicense"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/a"
-            android:textStyle="bold"
-            android:textSize="28dp"
-            android:textAllCaps="false"
-            android:text="Clear"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/button_y"
-            />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/saveLicense"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/a"
-            android:textStyle="bold"
-            android:textSize="28dp"
-            android:textAllCaps="false"
-            android:text="Save"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/button_y"
-            />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/nameLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Name"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/dateOfBirthLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Date of Birth"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/bloodGroupLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Blood Group"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/fatherLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:hint="Father/Husband"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/validityLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Validity"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/licenseNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="License No"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/authorityLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Issuing Authority"
+                android:background="@drawable/licensebackground"
+                />
+            <EditText
+                android:id="@+id/addressLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="Address"
+                android:background="@drawable/licensebackground"
+                />
+
+            <EditText
+                android:id="@+id/issueLicense"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginBottom="6dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:hint="First Issue"
+                android:background="@drawable/licensebackground"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:padding="10dp">
+
+                <Button
+                    android:id="@+id/clearLicense"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/a"
+                    android:textStyle="bold"
+                    android:textSize="28dp"
+                    android:layout_marginBottom="6dp"
+                    android:textAllCaps="false"
+                    android:text="Clear"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/button_y"
+                    />
+
+                <Button
+                    android:id="@+id/saveLicense"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/a"
+                    android:textStyle="bold"
+                    android:textSize="28dp"
+                    android:layout_marginBottom="6dp"
+                    android:textAllCaps="false"
+                    android:text="Save"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/button_y"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
