--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_v"
-    android:weightSum="4"
+    android:weightSum="7"
     android:padding="5dp"
     android:orientation="vertical"
     tools:context=".Login">
@@ -13,20 +13,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_height="450dp"
+        android:layout_weight="3"
         android:layout_margin="5dp"
-        android:weightSum="3"
         android:background="@drawable/background_y"
         android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="horizontal"
-            android:padding="4dp"
             android:gravity="center">
 
             <TextView
@@ -40,21 +38,19 @@
                 android:gravity="center"
                 android:background="@drawable/profilenametext"
                 />
-
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
-                android:textColor="@color/a"
+                android:textColor="@color/g"
                 android:textStyle="bold"
                 android:textSize="25sp"
                 android:layout_gravity="center"
@@ -68,38 +64,37 @@
                 android:singleLine="true"
                 android:textStyle="bold"
                 android:text="Instantaneous Speed:"
-                android:textColor="@color/a"
-                android:textSize="18sp" />
+                android:textColor="@color/g"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
-                android:textColor="@color/a"
+                android:textColor="@color/g"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
-                android:text="Total Time" />
+                android:text="Total Time:" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="bottom"
-                android:orientation="vertical">
-                
                 <Button
                     android:id="@+id/btnStart"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAllCaps="false"
                     android:textSize="28dp"
                     android:textColor="@color/g"
                     android:textStyle="bold"
+                    android:layout_marginBottom="5dp"
+                    android:layout_gravity="center_horizontal"
                     android:background="@drawable/background_button"
                     android:text="Start"/>
                 <LinearLayout
@@ -117,6 +112,7 @@
                         android:textAllCaps="false"
                         android:textColor="@color/g"
                         android:background="@drawable/button_z"
+
                         android:text="Pause"/>
                     <Button
                         android:id="@+id/btnStop"
@@ -128,18 +124,14 @@
                         android:textAllCaps="false"
                         android:background="@drawable/button_z"
                         android:text="Stop"/>
-
                 </LinearLayout>
-
-            </LinearLayout>
-
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:weightSum="5"
+        android:layout_weight="4"
         android:layout_margin="5dp"
         android:orientation="vertical">
 
@@ -147,14 +139,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="1"
+            android:layout_marginBottom="6dp"
             android:orientation="vertical">
 
             <Button
                 android:id="@+id/checkInternetId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:textSize="24dp"
                 android:textColor="@color/a"
@@ -166,7 +157,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal"
             android:gravity="center">
 
@@ -220,104 +211,97 @@
                 android:layout_margin="8dp"
                 android:background="@drawable/licenseb"/>
 
-
         </LinearLayout>
-        <LinearLayout
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="5dp">
 
+                    <Button
+                        android:id="@+id/staticId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
+                        android:drawableTop="@drawable/statica"
+                        android:background="@drawable/logical"
+                        android:text="Statics" />
+                    <Button
+                        android:id="@+id/mapId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
+                        android:drawableTop="@drawable/getlocationy"
+                        android:background="@drawable/logical"
+                        android:text="Get Location" />
 
-            <Button
-                android:id="@+id/staticId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/statica"
-                android:background="@drawable/logical"
-                android:text="Statics" />
-            <Button
-                android:id="@+id/mapId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/getlocationy"
-                android:background="@drawable/logical"
-                android:text="Get Location" />
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/vehicleId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
+                        android:drawableTop="@drawable/vehicley"
+                        android:background="@drawable/logical"
+                        android:text="Vehicleinfo" />
+                    <Button
+                        android:id="@+id/locationId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
+                        android:drawableTop="@drawable/savelocationx"
+                        android:background="@drawable/logical"
+                        android:text="Save Location"
+                        />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/gasStationId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
+                        android:drawableTop="@drawable/nearbyplacex"
+                        android:background="@drawable/logical"
+                        android:text="Nearby Place" />
+                    <Button
+                        android:id="@+id/trackId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAllCaps="false"
+                        android:textSize="25dp"
+                        android:textColor="@color/a"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="20dp"
+                        android:drawableTop="@drawable/destinationy"
+                        android:background="@drawable/logical"
+                        android:text="Track On" />
 
-            <Button
-                android:id="@+id/vehicleId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/vehicley"
-                android:background="@drawable/logical"
-               android:text="Vehicleinfo" />
-            <Button
-                android:id="@+id/locationId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/savelocationx"
-                android:background="@drawable/logical"
-                android:text="Save Location"
-                />
-        </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/gasStationId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/nearbyplacex"
-                android:background="@drawable/logical"
-                android:text="Nearby Place" />
-            <Button
-                android:id="@+id/trackId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textColor="@color/a"
-                android:textStyle="bold"
-                android:drawableTop="@drawable/destinationy"
-                android:background="@drawable/logical"
-                 android:text="Track On" />
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
