--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,76 +28,79 @@
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/profileName"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:textColor="@color/a"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/profilebackground"
-            android:hint="Name"
-            android:layout_marginTop="20dp"/>
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
 
-        <TextView
-            android:id="@+id/profileEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:textColor="@color/a"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/profilebackground"
-            android:hint="Email"
-            android:layout_marginTop="20dp"/>
+            <TextView
+                android:id="@+id/profileName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                android:hint="Name"
+                android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/ageNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:textColor="@color/a"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/profilebackground"
-            android:hint="Age"
-            android:layout_marginTop="20dp"/>
+            <TextView
+                android:id="@+id/profileEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                android:hint="Email"
+                android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/phoneNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:textColor="@color/a"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/profilebackground"
-            android:hint="Phone Number"
-            android:layout_marginTop="20dp"/>
-        <TextView
-            android:id="@+id/locationNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:textStyle="bold"
-            android:textColor="@color/a"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/profilebackground"
-            android:hint="Location"
-            android:layout_marginTop="20dp"/>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/ageNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                android:hint="Age"
+                android:layout_marginTop="20dp"/>
 
-
+            <TextView
+                android:id="@+id/phoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                android:hint="Phone Number"
+                android:layout_marginTop="20dp"/>
+            <TextView
+                android:id="@+id/locationNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                android:hint="Location"
+                android:layout_marginTop="20dp"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
