--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -22,97 +22,107 @@
         android:layout_marginTop="5dp"
         android:text="Your Vehicle Information" />
 
-    <TextView
-        android:id="@+id/ownerNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:background="@drawable/profilebackground"
-         />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/vehicleTypeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:background="@drawable/profilebackground"
-         />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/ownerNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                />
 
-    <TextView
-        android:id="@+id/modelNameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profilebackground"
-         />
+            <TextView
+                android:id="@+id/vehicleTypeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                />
 
-    <TextView
-        android:id="@+id/registrationText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profilebackground"
-         />
+            <TextView
+                android:id="@+id/modelNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilebackground"
+                />
 
-    <TextView
-        android:id="@+id/registrationDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:background="@drawable/profilebackground"
-         />
-    <TextView
-        android:id="@+id/chassisNoText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profilebackground"
-         />
-    <TextView
-        android:id="@+id/engineText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profilebackground"
-        />
-    <TextView
-        android:id="@+id/fuelTypeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/a"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/profilebackground"
-        />
+            <TextView
+                android:id="@+id/registrationText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilebackground"
+                />
+
+            <TextView
+                android:id="@+id/registrationDateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:background="@drawable/profilebackground"
+                />
+            <TextView
+                android:id="@+id/chassisNoText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilebackground"
+                />
+            <TextView
+                android:id="@+id/engineText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilebackground"
+                />
+            <TextView
+                android:id="@+id/fuelTypeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/a"
+                android:gravity="center"
+                android:textSize="28dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/profilebackground"
+                />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
