--- a/app/src/main/res/layout/activity_license.xml
+++ b/app/src/main/res/layout/activity_license.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="@color/a"
         android:textStyle="bold"
-        android:textSize="30dp"
+        android:textSize="35dp"
         android:gravity="center"
         android:layout_marginTop="5dp"
         android:text="Motor Driving License" />
@@ -28,7 +28,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <EditText
                 android:id="@+id/nameLicense"
@@ -163,10 +164,9 @@
                     android:textColor="@color/a"
                     android:textStyle="bold"
                     android:textSize="28dp"
-                    android:layout_marginBottom="6dp"
                     android:textAllCaps="false"
                     android:text="Clear"
-                    android:layout_marginRight="10dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/button_y"
                     />
 
@@ -177,10 +177,9 @@
                     android:textColor="@color/a"
                     android:textStyle="bold"
                     android:textSize="28dp"
-                    android:layout_marginBottom="6dp"
                     android:textAllCaps="false"
                     android:text="Save"
-                    android:layout_marginLeft="10dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/button_y"
                     />
             </LinearLayout>
