--- a/app/src/main/res/layout/activity_save_location.xml
+++ b/app/src/main/res/layout/activity_save_location.xml
@@ -17,6 +17,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/a"
         android:text="Country"/>
 
@@ -28,6 +29,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/a"
         android:text="Latency"/>
 
@@ -39,6 +41,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/a"
         android:text="Address"/>
 
