--- a/app/src/main/res/layout/activity_static.xml
+++ b/app/src/main/res/layout/activity_static.xml
@@ -18,6 +18,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/a"
         android:text="Speed"/>
     <TextView
@@ -28,6 +29,7 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="@color/a"
         android:text="Distance"/>
     <TextView
@@ -39,5 +41,6 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:textColor="@color/a"
+        android:layout_marginBottom="10dp"
         android:text="Time"/>
 </LinearLayout>
