--- a/app/src/main/res/layout/activity_track_on.xml
+++ b/app/src/main/res/layout/activity_track_on.xml
@@ -41,8 +41,8 @@
         android:background="@drawable/logical"
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:textColor="@color/m"
-        android:textSize="25dp"
+        android:textColor="@color/a"
+        android:textSize="28dp"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:text="Display Track" />
