--- a/app/src/main/res/layout/activity_vehicle_information.xml
+++ b/app/src/main/res/layout/activity_vehicle_information.xml
@@ -29,6 +29,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
 
             <EditText
@@ -149,7 +150,7 @@
                     android:textSize="28dp"
                     android:textAllCaps="false"
                     android:text="Clear"
-                    android:layout_marginTop="5dp"
+                    android:layout_margin="5dp"
                     android:layout_marginRight="10dp"
                     android:background="@drawable/button_y"
                     />
