--- a/app/src/main/res/layout/activity_barishal.xml
+++ b/app/src/main/res/layout/activity_barishal.xml
@@ -19,14 +19,14 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:textColor="@color/a"
         android:text="Range Office" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="22dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,7 +72,7 @@
 
 
             <Button
-                android:id="@+id/jhalokathiOffice"
+                android:id="@+id/jhalakathiOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -81,7 +81,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Jhalokathi" />
+                android:text="Jhalakathi" />
 
             <Button
                 android:id="@+id/pirojpurOffice"
