--- a/app/src/main/res/layout/activity_chittagong.xml
+++ b/app/src/main/res/layout/activity_chittagong.xml
@@ -18,14 +18,14 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:textColor="@color/a"
         android:text="Range Office"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="25dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,7 +117,7 @@
                 android:text="Feni" />
 
             <Button
-                android:id="@+id/khagrachoriOffice"
+                android:id="@+id/khagrachariOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -126,7 +126,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Khagrachori" />
+                android:text="Khagrachari" />
 
 
             <Button
@@ -176,7 +176,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Noakhali" />
+                android:text="RRF,Chittagong" />
 
         </LinearLayout>
     </ScrollView>
