--- a/app/src/main/res/layout/activity_dhaka.xml
+++ b/app/src/main/res/layout/activity_dhaka.xml
@@ -18,14 +18,14 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:textColor="@color/a"
         android:text="Range Office" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="22dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                 android:textColor="@color/a"
                 android:text="Gopalgonj" />
             <Button
-                android:id="@+id/kishorgonjOffice"
+                android:id="@+id/kishoreganjOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -164,7 +164,7 @@
                 android:text="Rajbari" />
 
             <Button
-                android:id="@+id/shariapurOffice"
+                android:id="@+id/shariatpurOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
