--- a/app/src/main/res/layout/activity_khulna.xml
+++ b/app/src/main/res/layout/activity_khulna.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:textColor="@color/a"
         android:text="Range Office" />
 
@@ -26,7 +26,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="22dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,7 +58,7 @@
                 android:text="Chuadanga" />
 
             <Button
-                android:id="@+id/jashoreOffice"
+                android:id="@+id/jassoreOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -67,7 +67,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Jashore" />
+                android:text="Jassore" />
 
             <Button
                 android:id="@+id/jhenaidahOffice"
