--- a/app/src/main/res/layout/activity_rangpur.xml
+++ b/app/src/main/res/layout/activity_rangpur.xml
@@ -19,7 +19,7 @@
         android:textStyle="bold"
         android:textSize="28dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="25dp"
         android:textColor="@color/a"
         android:text="Range Office" />
 
@@ -27,7 +27,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="22dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:text="Dinajpur" />
 
             <Button
-                android:id="@+id/gaibndhaOffice"
+                android:id="@+id/gaibandhaOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -95,7 +95,7 @@
                 android:text="Nilphamari" />
 
             <Button
-                android:id="@+id/panchagarOffice"
+                android:id="@+id/panchagarhOffice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button"
@@ -104,7 +104,7 @@
                 android:textSize="28dp"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/a"
-                android:text="Panchagar" />
+                android:text="Panchagarh" />
 
             <Button
                 android:id="@+id/rangpur"
